fix menu spacing

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -35,7 +35,7 @@ video {
 
 .nav .link {
   color: white;
-  margin: 4% 1%;
+  margin: 3% 1%;
 }
 
 .nav .link:nth-child(1) {
